[gd_scene load_steps=12 format=3 uid="uid://dqrr2awc63muq"]

[ext_resource type="Script" uid="uid://bp8ar412os0hw" path="res://scripts/endless_mode.gd" id="1_0y1du"]
[ext_resource type="PackedScene" uid="uid://bmgrninqogkp" path="res://Birds/birdie.tscn" id="2_huey7"]
[ext_resource type="Texture2D" uid="uid://cwj5su1ek3amt" path="res://ui/bannerBottom.png" id="2_i6513"]
[ext_resource type="PackedScene" uid="uid://c2tpe7rki1k43" path="res://scene/enemy_spawner.tscn" id="3_6epja"]
[ext_resource type="Texture2D" uid="uid://dfty1w8trenwv" path="res://ui/eagleHeadshot.png" id="3_bn0r5"]
[ext_resource type="LabelSettings" uid="uid://b54vk6cyclc3f" path="res://Fonts/armyfont.tres" id="5_ag57h"]
[ext_resource type="Script" uid="uid://cmcxg3oy62xk" path="res://scripts/lives.gd" id="5_r05js"]
[ext_resource type="Script" uid="uid://q0nlvado5h8q" path="res://scripts/label.gd" id="7_0jm57"]
[ext_resource type="Script" uid="uid://dadgiwrd2f03" path="res://scripts/shoot_percent.gd" id="8_0jm57"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m0ik6"]
size = Vector2(55.8613, 5.66998)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i6513"]
size = Vector2(80.6703, 175.482)

[node name="EndlessMode" type="Node2D"]
script = ExtResource("1_0y1du")

[node name="Border" type="StaticBody2D" parent="."]
visible = false
position = Vector2(-19.0001, -204)
scale = Vector2(0.570222, 3.70978)

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Border"]
position = Vector2(1042.58, 229.663)
scale = Vector2(36.3227, 1.23608)
shape = SubResource("RectangleShape2D_m0ik6")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Border"]
position = Vector2(1042.58, 47.866)
scale = Vector2(36.3227, 1.23608)
shape = SubResource("RectangleShape2D_m0ik6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Border"]
position = Vector2(-12.2758, 137.879)
shape = SubResource("RectangleShape2D_i6513")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Border"]
position = Vector2(2099.18, 143.135)
shape = SubResource("RectangleShape2D_i6513")

[node name="WaterBase" type="Node2D" parent="."]

[node name="BaseLayer" type="ColorRect" parent="WaterBase"]
offset_right = 1149.0
offset_bottom = 640.0

[node name="ColorRect" type="ColorRect" parent="WaterBase"]
offset_right = 1149.0
offset_bottom = 665.0
color = Color(0.384314, 0.635294, 0.988235, 0.733333)

[node name="Birdie" parent="." instance=ExtResource("2_huey7")]
position = Vector2(575, 598)

[node name="UI" type="Node2D" parent="."]

[node name="BannerBottom" type="Sprite2D" parent="UI"]
position = Vector2(575, 723)
texture = ExtResource("2_i6513")

[node name="EagleHeadshot" type="Sprite2D" parent="UI"]
position = Vector2(1007, 687)
scale = Vector2(3, 3)
texture = ExtResource("3_bn0r5")

[node name="Layers" type="CanvasLayer" parent="UI"]
layer = 10

[node name="MarginContainer" type="MarginContainer" parent="UI/Layers"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20

[node name="Rows" type="VBoxContainer" parent="UI/Layers/MarginContainer"]
layout_mode = 2

[node name="Top" type="HBoxContainer" parent="UI/Layers/MarginContainer/Rows"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.35

[node name="Game" type="HBoxContainer" parent="UI/Layers/MarginContainer/Rows"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.8

[node name="Bottom" type="HBoxContainer" parent="UI/Layers/MarginContainer/Rows"]
layout_mode = 2
size_flags_vertical = 3

[node name="InfoArea" type="VBoxContainer" parent="UI/Layers/MarginContainer/Rows/Bottom"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Top" type="HBoxContainer" parent="UI/Layers/MarginContainer/Rows/Bottom/InfoArea"]
layout_mode = 2
size_flags_vertical = 6
size_flags_stretch_ratio = 0.35

[node name="Lives" type="Label" parent="UI/Layers/MarginContainer/Rows/Bottom/InfoArea/Top"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Lives Left: 3"
label_settings = ExtResource("5_ag57h")
script = ExtResource("5_r05js")

[node name="Top2" type="HBoxContainer" parent="UI/Layers/MarginContainer/Rows/Bottom/InfoArea"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.35

[node name="Score" type="Label" parent="UI/Layers/MarginContainer/Rows/Bottom/InfoArea/Top2"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Score 0"
label_settings = ExtResource("5_ag57h")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("7_0jm57")

[node name="Top3" type="HBoxContainer" parent="UI/Layers/MarginContainer/Rows/Bottom/InfoArea"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.35

[node name="ShootPercent" type="Label" parent="UI/Layers/MarginContainer/Rows/Bottom/InfoArea/Top3"]
layout_mode = 2
text = "% Shot: "
label_settings = ExtResource("5_ag57h")
script = ExtResource("8_0jm57")

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Layers/MarginContainer/Rows/Bottom"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.94

[node name="enemySpawner" parent="." instance=ExtResource("3_6epja")]
position = Vector2(204, -1602)
spawnRate = 5

[node name="enemySpawner2" parent="." instance=ExtResource("3_6epja")]
position = Vector2(818, -1050)
spawnRate = 10

[node name="SpeedUp" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="child_entered_tree" from="UI/Layers" to="." method="_on_layers_child_entered_tree"]
[connection signal="child_entered_tree" from="enemySpawner" to="." method="_on_enemy_spawner_child_entered_tree"]
[connection signal="child_exiting_tree" from="enemySpawner" to="." method="_on_enemy_spawner_child_exiting_tree"]
[connection signal="child_entered_tree" from="enemySpawner2" to="." method="_on_enemy_spawner_2_child_entered_tree"]
[connection signal="child_exiting_tree" from="enemySpawner2" to="." method="_on_enemy_spawner_2_child_exiting_tree"]
[connection signal="timeout" from="SpeedUp" to="." method="_on_speed_up_timeout"]
